Añaniendo estilos finales del header y borrando el titulo (h1) de la base)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header inicio">
       <div class="contenedor contenido-header">
         <div class="barra">
           <a href="/index.html">
@@ -27,7 +27,10 @@
           </nav>
         </div>
         <!--.barra-->
-        <h1>Venta de Casas y Departamentos de Lujo</h1>
+        <h1>
+          Venta de Casas y Departamentos
+          <span> Exclusivos de Lujo </span>
+        </h1>
       </div>
     </header>
 
