--- a/index.html
+++ b/index.html
@@ -35,7 +35,43 @@
     </header>
 
     <main class="contenedor seccion">
-      <h1>titulo Pagina</h1>
+      <h1>Más sobre Nosotros</h1>
+      <div class="iconos-nosotros">
+        <div class="icono">
+          <img
+            src="build/img/icono1.svg"
+            alt="icono seguridad"
+            loading="lazy"
+          />
+          <h3>Seguridad</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
+            veritatis! Provident, aspernatur id incidunt laboriosam quam
+            corporis harum sunt deleniti in omnis placeat debitis, voluptates
+            doloremque repellendus alias non.
+          </p>
+        </div>
+        <div class="icono">
+          <img src="build/img/icono2.svg" alt="icono precio" loading="lazy" />
+          <h3>Precio</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
+            veritatis! Provident, aspernatur id incidunt laboriosam quam
+            corporis harum sunt deleniti in omnis placeat debitis, voluptates
+            doloremque repellendus alias non.
+          </p>
+        </div>
+        <div class="icono">
+          <img src="build/img/icono3.svg" alt="icono tiempo" loading="lazy" />
+          <h3>Tiempo</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
+            veritatis! Provident, aspernatur id incidunt laboriosam quam
+            corporis harum sunt deleniti in omnis placeat debitis, voluptates
+            doloremque repellendus alias non.
+          </p>
+        </div>
+      </div>
     </main>
 
     <footer class="footer seccion">
