Configuracion final de los botones y agregando las secciones de blog y testimoniales. Hasta aqui finaliza el html de la pagina principal

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </li>
             </ul>
             <!-- /ul -->
-            <a href="anuncio.html" class="boton boton-amarillo">
+            <a href="anuncio.html" class="boton-amarillo-block">
               Ver Propiedad
             </a>
           </div>
@@ -150,7 +150,7 @@
               </li>
             </ul>
             <!-- /ul -->
-            <a href="anuncio.html" class="boton boton-amarillo">
+            <a href="anuncio.html" class="boton-amarillo-block">
               Ver Propiedad
             </a>
           </div>
@@ -190,7 +190,7 @@
               </li>
             </ul>
             <!-- /ul -->
-            <a href="anuncio.html" class="boton boton-amarillo">
+            <a href="anuncio.html" class="boton-amarillo-block">
               Ver Propiedad
             </a>
           </div>
@@ -203,6 +203,69 @@
         <a href="anuncios.html" class="boton-verde">Ver Todas</a>
       </div>
     </section>
+
+    <section class="imagen-contacto">
+      <h2>Encuentra la casa de tu sueños</h2>
+      <p>
+        Llena el formulario de contacto y un asesor se pondra en contacto
+        contigo a la brevedad
+      </p>
+      <a href="contacto.html" class="boton-amarillo">contactanos</a>
+    </section>
+
+    <div class="contenedor seccion seccion-inferior">
+      <section class="blog">
+        <h3>Nuestro Blog</h3>
+        <article class="entrada-blog">
+          <div class="imagen">
+            <picture>
+              <source srcser="build/img/blog1.webp" type="image/webp" />
+              <source srcser="build/img/blog1.jpg" type="image/jpeg" />
+              <img src="build/img/blog1.jpg" alt="texto entrada blog" />
+            </picture>
+          </div>
+          <div class="texto-entrada">
+            <a href="entrada.html">
+              <h4>Terraza en el techo de tu casa</h4>
+              <p>Escrito el: <span>20/10/2023</span> por <span>Admin</span></p>
+              <p>
+                Consejos para construir una terraza en el techo de tu casa con
+                los mejoes materiales y ahorrando dinero
+              </p>
+            </a>
+          </div>
+        </article>
+        <article class="entrada-blog">
+          <div class="imagen">
+            <picture>
+              <source srcser="build/img/blog2.webp" type="image/webp" />
+              <source srcser="build/img/blog2.jpg" type="image/jpeg" />
+              <img src="build/img/blog2.jpg" alt="texto entrada blog" />
+            </picture>
+          </div>
+          <div class="texto-entrada">
+            <a href="entrada.html">
+              <h4>Guia para la decoracion de tu hogas</h4>
+              <p>Escrito el: <span>20/10/2023</span> por <span>Admin</span></p>
+              <p>
+                Maximiza el espacio en tu hogar con esta guia, aprende a
+                combinar muebles y colores para darle vida a tu espacio
+              </p>
+            </a>
+          </div>
+        </article>
+      </section>
+      <section class="testimoniales">
+        <h3>Testimoniales</h3>
+        <div class="testimonial">
+          <blockquote>
+            El personal se comportó de una excelente forma, muy buena atención y
+            la casa que me ofrecieron cumple con todas mis expectativas.
+          </blockquote>
+          <p>- Juan Cano</p>
+        </div>
+      </section>
+    </div>
 
     <footer class="footer seccion">
       <div class="contenedor contenedor-footer">
