--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="icono">
           <img src="build/img/icono3.svg" alt="icono tiempo" loading="lazy" />
-          <h3>Tiempo</h3>
+          <h3>A Tiempo</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
             veritatis! Provident, aspernatur id incidunt laboriosam quam
@@ -259,8 +259,8 @@
         <h3>Testimoniales</h3>
         <div class="testimonial">
           <blockquote>
-            El personal se comportó de una excelente forma, muy buena atención y
-            la casa que me ofrecieron cumple con todas mis expectativas.
+            4 El personal se comportó de una excelente forma, muy buena atención
+            y la casa que me ofrecieron cumple con todas mis expectativas.
           </blockquote>
           <p>- Juan Cano</p>
         </div>
