--- a/index.html
+++ b/index.html
@@ -34,46 +34,6 @@
       </div>
     </header>
 
-    <main class="contenedor seccion">
-      <h1>Más sobre Nosotros</h1>
-      <div class="iconos-nosotros">
-        <div class="icono">
-          <img
-            src="build/img/icono1.svg"
-            alt="icono seguridad"
-            loading="lazy"
-          />
-          <h3>Seguridad</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
-            veritatis! Provident, aspernatur id incidunt laboriosam quam
-            corporis harum sunt deleniti in omnis placeat debitis, voluptates
-            doloremque repellendus alias non.
-          </p>
-        </div>
-        <div class="icono">
-          <img src="build/img/icono2.svg" alt="icono precio" loading="lazy" />
-          <h3>Precio</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
-            veritatis! Provident, aspernatur id incidunt laboriosam quam
-            corporis harum sunt deleniti in omnis placeat debitis, voluptates
-            doloremque repellendus alias non.
-          </p>
-        </div>
-        <div class="icono">
-          <img src="build/img/icono3.svg" alt="icono tiempo" loading="lazy" />
-          <h3>A Tiempo</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
-            veritatis! Provident, aspernatur id incidunt laboriosam quam
-            corporis harum sunt deleniti in omnis placeat debitis, voluptates
-            doloremque repellendus alias non.
-          </p>
-        </div>
-      </div>
-    </main>
-
     <section class="seccion contenedor">
       <h2>Casas y Depas en Venta</h2>
       <div class="contenedor-anuncios">
@@ -221,7 +181,11 @@
             <picture>
               <source srcser="build/img/blog1.webp" type="image/webp" />
               <source srcser="build/img/blog1.jpg" type="image/jpeg" />
-              <img src="build/img/blog1.jpg" alt="texto entrada blog" />
+              <img
+                loading="lazy"
+                src="build/img/blog1.jpg"
+                alt="texto entrada blog"
+              />
             </picture>
           </div>
           <div class="texto-entrada">
@@ -240,7 +204,11 @@
             <picture>
               <source srcser="build/img/blog2.webp" type="image/webp" />
               <source srcser="build/img/blog2.jpg" type="image/jpeg" />
-              <img src="build/img/blog2.jpg" alt="texto entrada blog" />
+              <img
+                loading="lazy"
+                src="build/img/blog2.jpg"
+                alt="texto entrada blog"
+              />
             </picture>
           </div>
           <div class="texto-entrada">
