--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
           <div class="texto-entrada">
             <a href="entrada.html">
               <h4>Terraza en el techo de tu casa</h4>
-              <p>Escrito el: <span>20/10/2023</span> por <span>Admin</span></p>
+              <p class="informacion-meta">
+                Escrito el: <span>20/10/2023</span> por <span>Admin</span>
+              </p>
               <p>
                 Consejos para construir una terraza en el techo de tu casa con
                 los mejoes materiales y ahorrando dinero
@@ -214,7 +216,9 @@
           <div class="texto-entrada">
             <a href="entrada.html">
               <h4>Guia para la decoracion de tu hogas</h4>
-              <p>Escrito el: <span>20/10/2023</span> por <span>Admin</span></p>
+              <p class="informacion-meta">
+                Escrito el: <span>20/10/2023</span> por <span>Admin</span>
+              </p>
               <p>
                 Maximiza el espacio en tu hogar con esta guia, aprende a
                 combinar muebles y colores para darle vida a tu espacio
