--- a/anuncios.html
+++ b/anuncios.html
@@ -19,12 +19,22 @@
               alt="Logotipo de Bienes Raices"
             />
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-          </nav>
+          <div class="mobile-menu">
+            <img src="build/img/barras.svg" alt="icono menu responsive" />
+          </div>
+          <div class="derecha">
+            <img
+              class="dark-mode-boton"
+              src="build/img/dark-mode.svg"
+              alt="modo oscuro"
+            />
+            <nav class="navegacion">
+              <a href="nosotros.html">Nosotros</a>
+              <a href="anuncios.html">Anuncios</a>
+              <a href="blog.html">Blog</a>
+              <a href="contacto.html">Contacto</a>
+            </nav>
+          </div>
         </div>
         <!--.barra-->
       </div>
@@ -47,16 +57,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
@@ -87,16 +104,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
@@ -127,16 +151,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
@@ -167,16 +198,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
@@ -207,16 +245,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
@@ -247,16 +292,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
