--- a/contacto.html
+++ b/contacto.html
@@ -19,12 +19,22 @@
               alt="Logotipo de Bienes Raices"
             />
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-          </nav>
+          <div class="mobile-menu">
+            <img src="build/img/barras.svg" alt="icono menu responsive" />
+          </div>
+          <div class="derecha">
+            <img
+              class="dark-mode-boton"
+              src="build/img/dark-mode.svg"
+              alt="modo oscuro"
+            />
+            <nav class="navegacion">
+              <a href="nosotros.html">Nosotros</a>
+              <a href="anuncios.html">Anuncios</a>
+              <a href="blog.html">Blog</a>
+              <a href="contacto.html">Contacto</a>
+            </nav>
+          </div>
         </div>
         <!--.barra-->
       </div>
