--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
               alt="Logotipo de Bienes Raices"
             />
           </a>
-          <nav class="navegacion">
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-          </nav>
+          <div class="mobile-menu">
+            <img src="build/img/barras.svg" alt="icono menu responsive" />
+          </div>
+          <div class="derecha">
+            <img
+              class="dark-mode-boton"
+              src="build/img/dark-mode.svg"
+              alt="modo oscuro"
+            />
+            <nav class="navegacion">
+              <a href="nosotros.html">Nosotros</a>
+              <a href="anuncios.html">Anuncios</a>
+              <a href="blog.html">Blog</a>
+              <a href="contacto.html">Contacto</a>
+            </nav>
+          </div>
         </div>
         <!--.barra-->
         <h1>
@@ -33,6 +43,46 @@
         </h1>
       </div>
     </header>
+
+    <section class="contenedor seccion">
+      <h1>Más sobre Nosotros</h1>
+      <div class="iconos-nosotros">
+        <div class="icono">
+          <img
+            src="build/img/icono1.svg"
+            alt="icono seguridad"
+            loading="lazy"
+          />
+          <h3>Seguridad</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
+            veritatis! Provident, aspernatur id incidunt laboriosam quam
+            corporis harum sunt deleniti in omnis placeat debitis, voluptates
+            doloremque repellendus alias non.
+          </p>
+        </div>
+        <div class="icono">
+          <img src="build/img/icono2.svg" alt="icono precio" loading="lazy" />
+          <h3>Precio</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
+            veritatis! Provident, aspernatur id incidunt laboriosam quam
+            corporis harum sunt deleniti in omnis placeat debitis, voluptates
+            doloremque repellendus alias non.
+          </p>
+        </div>
+        <div class="icono">
+          <img src="build/img/icono3.svg" alt="icono tiempo" loading="lazy" />
+          <h3>A Tiempo</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, a
+            veritatis! Provident, aspernatur id incidunt laboriosam quam
+            corporis harum sunt deleniti in omnis placeat debitis, voluptates
+            doloremque repellendus alias non.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <section class="seccion contenedor">
       <h2>Casas y Depas en Venta</h2>
@@ -52,16 +102,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
@@ -92,16 +149,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
@@ -132,16 +196,23 @@
             <p class="precio">$300,000,000</p>
             <ul class="icono-caracteristicas">
               <li>
-                <img loading="lazy" src="build/img/icono_wc.svg" alt="wc" />
+                <img
+                  class="icono"
+                  loading="lazy"
+                  src="build/img/icono_wc.svg"
+                  alt="wc"
+                />
                 <p>3</p>
               </li>
               <li>
-                <img loading="lazy" src="build/img/icono_estacionamiento.svg"
-                alt=estacionamiento" />
+                <img class="icono" loading="lazy"
+                src="build/img/icono_estacionamiento.svg" alt=estacionamiento"
+                />
                 <p>3</p>
               </li>
               <li>
                 <img
+                  class="icono"
                   loading="lazy"
                   src="build/img/icono_dormitorio.svg"
                   alt="dormitorios"
